--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2005-07-01  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file-operations.c:
+	Fix test
+
+	* NEWS:
+	Update for release
+
+	* configure.in: 
+	Require eel 2.11.3
+	
+2005-07-01  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-window-info.[ch]:
 	* src/nautilus-window.c:
 	Add nautilus_window_info_get_bookmark_list
