--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.11.3 are:
+* Turn the list view into a tree
+* No dnd drop rect on the desktop
+* Use gtk bookmars as bookmark source
+* Add bookmarks to spatial mode
+* New places sidebar
+* better sort order for filenames with numbers in them
+  (needs glib 2.7.x)
+* Better handling of font sizes wrt zoom in icon view
+* Fix leaks
+
 Major changes in 2.11.2 are:
 * Fix sort order for size/count/time
 * ctrl+scrollwheel changes zoom, ctrl-= zooms in
