--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-01  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Add places sidebar.
+
 2005-07-01  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
