--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-07-01  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.11.3 ===
+
+2005-07-01  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-operations.c:
 	Fix test
 
