Replace eel_make_uri_from_input_with_trailing_ws with the gnome-vfs one.
2005-07-02  Christian Kellner  <gicmo@gnome.org>

	* src/nautilus-location-entry.c:
	Replace eel_make_uri_from_input_with_trailing_ws with
	the gnome-vfs one.
	Fixes bug #165755.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-07-02  Christian Kellner  <gicmo@gnome.org>
+
+	* src/nautilus-location-entry.c:
+	Replace eel_make_uri_from_input_with_trailing_ws with
+	the gnome-vfs one.
+	Fixes bug #165755.
+
 2005-07-01  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
