--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-02  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 === nautilus 2.11.3 ===
 
 2005-07-01  Alexander Larsson  <alexl@redhat.com>
