Translation updated by Sven Sapelson.
2005-07-04  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by  Sven Sapelson.

--- a/po/et.po
+++ b/po/et.po
@@ -1341,7 +1341,7 @@ msgid "\"%s\" cannot be deleted because it is on a read-only disk."
 msgstr "\"%s\" pole võimalik kustutada, kuna see asub kirjutuskaitsega kettal."
 
 #: ../libnautilus-private/nautilus-file-operations.c:608
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\"%s\" cannot be moved because you do not have permissions to change it or "
 "its parent folder."
@@ -2719,9 +2719,8 @@ msgstr "Viga rakenduse käivitamisel"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:918
 #: ../libnautilus-private/nautilus-program-choosing.c:930
-#, fuzzy
 msgid "This drop target only supports local files."
-msgstr "Lohistada on võimalik vaid kohalikke faile"
+msgstr "Lohistada on võimalik vaid kohalikke faile."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:919
 msgid ""
@@ -2731,7 +2730,6 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:921
 #: ../libnautilus-private/nautilus-program-choosing.c:933
-#, fuzzy
 msgid "Drop Target Only Supports Local Files"
 msgstr "Lohistada on võimalik vaid kohalikke faile"
 
@@ -3127,13 +3125,12 @@ msgid "All executable files in this folder will appear in the Scripts menu."
 msgstr "Kõik käivitatavad failid selles kataloogis ilmuvad Skriptide menüüsse."
 
 #: ../src/file-manager/fm-directory-view.c:5048
-#, fuzzy
 msgid ""
 "Choosing a script from the menu will run that script with any selected items "
 "as input."
 msgstr ""
-"Menüüst skripti valides käivitatakse see valitud kirjel sisendparameetrina "
-"valitud elemendi nime."
+"Menüüst skripti valides käivitatakse see valitud kirjel kasutades "
+"sisendparameetrina valitud elemendi nime."
 
 #: ../src/file-manager/fm-directory-view.c:5050
 msgid "About Scripts"
@@ -4446,7 +4443,7 @@ msgstr ""
 
 #: ../src/nautilus-bookmarks-window.c:188
 msgid "No bookmarks defined"
-msgstr ""
+msgstr "Järjehoidjaid pole kirjeldatud"
 
 #: ../src/nautilus-bookmarks-window.glade.h:1
 msgid "<b>_Bookmarks</b>"
@@ -5170,13 +5167,12 @@ msgid "Clear History"
 msgstr "Ajaloo tühjendamine"
 
 #: ../src/nautilus-navigation-window-menus.c:287
-#, fuzzy
 msgid ""
 "Do you want to remove any bookmarks with the non-existing location from your "
 "list?"
 msgstr ""
-"Asukohta \"%s\" ei ole enam olemas. Kas soovid järjehoidjatest kõik sinna "
-"viitavad kirjed kustutada?"
+"Kas sa soovid loendist eemaldada kõik järjehoidjad, mis viitavad olematule "
+"asukohale?"
 
 #: ../src/nautilus-navigation-window-menus.c:289
 #, c-format
