--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* et.po: Translation updated by  Sven Sapelson.
 
+2005-07-04  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by  Sven Sapelson.
+
 2005-06-27  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by  Sven Sapelson.
