Translation updated by Ivar Smolin.
2005-07-04  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-04 06:18+0000\n"
-"PO-Revision-Date: 2005-07-04 10:24+0300\n"
+"PO-Revision-Date: 2005-07-04 13:14+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -597,7 +597,6 @@ msgstr ""
 "ettevaatusega."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
-#, fuzzy
 msgid ""
 "If set to true, then Nautilus will use the user's home folder as the "
 "desktop. If it is false, then it will use ~/Desktop as the desktop."
@@ -1087,13 +1086,10 @@ msgstr ""
 "menüüst 'väljasta'."
 
 #: ../libnautilus-private/nautilus-desktop-link-monitor.c:133
-#, fuzzy
 msgid ""
 "If you want to unmount the volume, please use Unmount Volume in the right-"
 "click menu of the volume."
 msgstr ""
-"Kui soovid kettaseadet väljastada, vali ikoonil pareklikiga avanevast "
-"menüüst 'väljasta'."
 
 #: ../libnautilus-private/nautilus-dnd.c:631
 msgid "_Move here"
@@ -1231,7 +1227,7 @@ msgid "\"%s\" cannot be deleted because it is on a read-only disk."
 msgstr "\"%s\" pole võimalik kustutada, kuna see asub kirjutuskaitsega kettal."
 
 #: ../libnautilus-private/nautilus-file-operations.c:608
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\"%s\" cannot be moved because you do not have permissions to change it or "
 "its parent folder."
@@ -2525,9 +2521,8 @@ msgstr "Viga rakenduse käivitamisel"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:920
 #: ../libnautilus-private/nautilus-program-choosing.c:932
-#, fuzzy
 msgid "This drop target only supports local files."
-msgstr "Lohistada on võimalik vaid kohalikke faile"
+msgstr "Lohistada on võimalik vaid kohalikke faile."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:921
 msgid ""
@@ -2537,7 +2532,6 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:923
 #: ../libnautilus-private/nautilus-program-choosing.c:935
-#, fuzzy
 msgid "Drop Target Only Supports Local Files"
 msgstr "Lohistada on võimalik vaid kohalikke faile"
 
@@ -2852,9 +2846,9 @@ msgstr ""
 "kustutada?"
 
 #: ../src/file-manager/fm-directory-view.c:3326
-#, fuzzy, c-format
+#, c-format
 msgid "%d of the selected items cannot be moved to the Trash"
-msgstr "Faili \"%s\" pole võimalik prügikasti panna."
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:3332
 msgid "Delete Immediately?"
@@ -2955,13 +2949,12 @@ msgid "All executable files in this folder will appear in the Scripts menu."
 msgstr "Kõik käivitatavad failid selles kataloogis ilmuvad Skriptide menüüsse."
 
 #: ../src/file-manager/fm-directory-view.c:5251
-#, fuzzy
 msgid ""
 "Choosing a script from the menu will run that script with any selected items "
 "as input."
 msgstr ""
-"Menüüst skripti valides käivitatakse see valitud kirjel sisendparameetrina "
-"valitud elemendi nime."
+"Menüüst skripti valides käivitatakse see valitud kirjel kasutades "
+"sisendparameetrina valitud elemendi nime."
 
 #: ../src/file-manager/fm-directory-view.c:5253
 msgid "About Scripts"
@@ -3077,9 +3070,8 @@ msgstr "Vaatab või muudab iga valitud kirje omadusi"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6077
-#, fuzzy
 msgid "View or modify the properties of the open folder"
-msgstr "Vaatab või muudab iga valitud kirje omadusi"
+msgstr "Vaatab või muudab avatud kataloogi omadusi"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6080
@@ -3163,9 +3155,8 @@ msgstr "Valmistab valitud failid ette liigutamiseks käsuga Aseta failid"
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6127
-#, fuzzy
 msgid "Prepare the selected files to be copied with a Paste command"
-msgstr "Valmistab valitud failid ette kopeerimiseks käsuga Aseta failid"
+msgstr "Valmistab valitud failid ette kopeerimiseks Aseta käsuga"
 
 #. name, stock id
 #. label, accelerator
@@ -3326,23 +3317,20 @@ msgstr "Ava fail ja sulge aken"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6199
-#, fuzzy
 msgid "Open this folder in a navigation window"
 msgstr "Ava kaust navigeerimisaknas"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6204
-#, fuzzy
 msgid "Prepare this folder to be moved with a Paste command"
-msgstr "Valmistab avatud kausta ette liigutamiseks käsuga Aseta failid"
+msgstr "Valmistab avatud kausta ette liigutamiseks Aseta käsuga"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6208
-#, fuzzy
 msgid "Prepare this folder to be copied with a Paste command"
-msgstr "Valmistab avatud kausta ette kopeerimiseks käsuga Aseta failid"
+msgstr "Valmistab selle kausta ette kopeerimiseks Aseta käsuga"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6213
@@ -4332,7 +4320,7 @@ msgstr ""
 
 #: ../src/nautilus-bookmarks-window.c:189
 msgid "No bookmarks defined"
-msgstr ""
+msgstr "Järjehoidjaid pole kirjeldatud"
 
 #: ../src/nautilus-bookmarks-window.glade.h:1
 msgid "<b>_Bookmarks</b>"
@@ -5465,13 +5453,12 @@ msgid "provides visual status"
 msgstr ""
 
 #: ../src/nautilus-window-bookmarks.c:94
-#, fuzzy
 msgid ""
 "Do you want to remove any bookmarks with the non-existing location from your "
 "list?"
 msgstr ""
-"Asukohta \"%s\" ei ole enam olemas. Kas soovid järjehoidjatest kõik sinna "
-"viitavad kirjed kustutada?"
+"Kas sa soovid loendist eemaldada kõik järjehoidjad, mis viitavad olematule "
+"asukohale?"
 
 #: ../src/nautilus-window-bookmarks.c:100
 msgid "Remove"
