Fixed German translation by Jens Seidel <jensseidel@users.sf.net>.
2005-07-04  Hendrik Richter  <hendi@gnome-de.org>

	* de.po: Fixed German translation by
	Jens Seidel <jensseidel@users.sf.net>.

--- a/po/de.po
+++ b/po/de.po
@@ -38,7 +38,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-14 14:42+0200\n"
-"PO-Revision-Date: 2005-02-08 15:39+0100\n"
+"PO-Revision-Date: 2005-07-04 17:11+0200\n"
 "Last-Translator: Hendrik Richter <hendi@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -632,7 +632,7 @@ msgstr "Voreingestellte Spaltenreihenfolge der Listenansicht."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:15
 msgid "Default folder viewer"
-msgstr "Voreingstellte Ordneransicht"
+msgstr "Voreingestellte Ordneransicht"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:16
 msgid "Default icon zoom level"
@@ -715,7 +715,7 @@ msgid ""
 msgstr ""
 "Große Ordner, die größer sind als der Wert dieses Schlüssels werden "
 "abgeschnitten, sodass sie ungefähr so groß wie dieser Wert sind. Der Zweck "
-"dieses Schlüssels besteht darin, unerwüschte Nautilus-Abstürze zu vermeiden, "
+"dieses Schlüssels besteht darin, unerwünschte Nautilus-Abstürze zu vermeiden, "
 "die durch eine nicht bewältigbare Datenmenge verursacht werden. Ein "
 "negativer Schlüssel Wert führt dazu, dass keine Obergrenze festgelegt wird. "
 "Da Ordner in größeren Dateneinheiten eingelesen werden, ist dies ein "
@@ -2934,7 +2934,7 @@ msgstr "Dieses Ablegeziel unterstützt ausschließlich lokale Dateien."
 msgid ""
 "To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
-"Um nichtlokale Dateien zu öffnen, müssen Sie Sie sie in einen lokalen Ordner "
+"Um nichtlokale Dateien zu öffnen, müssen Sie sie in einen lokalen Ordner "
 "kopieren und dann noch einmal hier ablegen."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:923
@@ -2947,7 +2947,7 @@ msgid ""
 "To open non-local files copy them to a local folder and then drop them "
 "again. The local files you dropped have already been opened."
 msgstr ""
-"Um nichtlokale Dateien zu öffnen, müssen Sie Sie sie in einen lokalen Ordner "
+"Um nichtlokale Dateien zu öffnen, müssen Sie sie in einen lokalen Ordner "
 "kopieren und dann noch einmal hier ablegen. Die lokalen, abgelegten Dateien "
 "wurden bereits geöffnet."
 
@@ -4959,7 +4959,7 @@ msgstr "_Verbinden"
 #: ../src/nautilus-emblem-sidebar.c:241
 #, c-format
 msgid "Couldn't remove emblem with name '%s'."
-msgstr "Das Emlbem mit Namen »%s« konnte nicht entfernt werden."
+msgstr "Das Emblem mit Namen »%s« konnte nicht entfernt werden."
 
 #: ../src/nautilus-emblem-sidebar.c:242
 msgid ""
@@ -5811,7 +5811,7 @@ msgstr "Sie haben keinen gültigen Dateinamen angegeben."
 
 #: ../src/nautilus-property-browser.c:1099
 msgid "Please try again."
-msgstr "Notte versuchen Sie es noch einmal"
+msgstr "Bitte versuchen Sie es noch einmal."
 
 #: ../src/nautilus-property-browser.c:1101
 #: ../src/nautilus-property-browser.c:1146
@@ -6054,7 +6054,7 @@ msgid ""
 "GNU General Public License for more details."
 msgstr ""
 "Die Veröffentlichung dieses Programms erfolgt in der Hoffnung, \n"
-"daß es Ihnen von Nutzen sein wird, aber OHNE IRGENDEINE GARANTIE, \n"
+"dass es Ihnen von Nutzen sein wird, aber OHNE IRGENDEINE GARANTIE, \n"
 "sogar ohne die implizite Garantie der MARKTREIFE oder der VERWENDBARKEIT \n"
 "FÜR EINEN BESTIMMTEN ZWECK. Details finden Sie in der GNU General Public \n"
 "License."
@@ -6207,7 +6207,7 @@ msgstr "Ver_kleinern"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:637 ../src/nautilus-zoom-control.c:97
 msgid "Show the contents in less detail"
-msgstr "Den Inhalt weniger detailiert anzeigen"
+msgstr "Den Inhalt weniger detailliert anzeigen"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:640
@@ -6633,7 +6633,7 @@ msgstr "Ihre Netzwerk-Server im Dateimanager Nautilus anzeigen"
 #~ msgstr "Öffnen mit..."
 
 #~ msgid "bonobo_ui_init() failed."
-#~ msgstr "bonobo_ui_init() fehgeschlagen."
+#~ msgstr "bonobo_ui_init() fehlgeschlagen."
 
 #~ msgid "Factory for Nautilus component adapter factories"
 #~ msgstr "Fabrik für Nautilus-Komponentenadapter-Fabriken"
