Add x-directory/normal and inode/directory to the list of mime types this
2005-07-05  Joe Shaw  <joeshaw@novell.com>

	* nautilus-folder-handler.desktop.in: Add x-directory/normal
	and inode/directory to the list of mime types this desktop file
	can handle.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-05  Joe Shaw  <joeshaw@novell.com>
+
+	* nautilus-folder-handler.desktop.in: Add x-directory/normal
+	and inode/directory to the list of mime types this desktop file
+	can handle.
+
 2005-07-05  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-dnd.h:
