--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-07-06  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	* libnautilus-private/nautilus-icon-container.c:
+	* libnautilus-private/nautilus-icon-private.h:
+	Add normal_alpha style property that is used when
+	frame_text is on.
+	
+	Patch from Benjamin Berg <benjamin@sipsolutions.net>
+
 2005-07-05  Joe Shaw  <joeshaw@novell.com>
 
 	* nautilus-folder-handler.desktop.in: Add x-directory/normal
