Make XML well formed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-06  Danilo Šegan  <danilo@gnome.org>
+
+	* src/file-manager/nautilus-directory-view-ui.xml: Add space
+	before 'action="Rename"'.
+
 2005-07-06  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-container.c:
