--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-07  Joe Shaw  <joeshaw@novell.com>
+
+	* configure.in: Bump required gnome-vfs version up to
+	2.11.1
+
 2005-07-06  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-window.c: (add_view_as_menu_item):
