Translation updated by Ivar Smolin.
2005-07-08  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: nautilus 2.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-04-30 21:04+0000\n"
-"PO-Revision-Date: 2005-04-19 21:55+0300\n"
-"Last-Translator:  Sven Sapelson <sven.sapelson@gmail.com>\n"
+"PO-Revision-Date: 2005-07-07 23:59+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3171,22 +3171,22 @@ msgid "\"%s\" will be copied if you select the Paste Files command"
 msgstr "\"%s\" kopeeritakse, kui valid käsu Aseta"
 
 #: ../src/file-manager/fm-directory-view.c:5225
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "The %d selected item will be moved if you select the Paste Files command"
 msgid_plural ""
 "The %d selected items will be moved if you select the Paste Files command"
-msgstr[0] "\"%s\" liigutatakse, kui valid käsu Aseta"
-msgstr[1] "\"%s\" liigutatakse, kui valid käsu Aseta"
+msgstr[0] "%d valitud kirje liigutatakse, kui valid käsu Aseta failid"
+msgstr[1] "%d valitud kirjet liigutatakse, kui valid käsu Aseta failid"
 
 #: ../src/file-manager/fm-directory-view.c:5232
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "The %d selected item will be copied if you select the Paste Files command"
 msgid_plural ""
 "The %d selected items will be copied if you select the Paste Files command"
-msgstr[0] "\"%s\" kopeeritakse, kui valid käsu Aseta"
-msgstr[1] "\"%s\" kopeeritakse, kui valid käsu Aseta"
+msgstr[0] "%d valitud kirje kopeeritakse, kui valid käsu Aseta failid"
+msgstr[1] "%d valitud kirjet kopeeritakse, kui valid käsu Aseta failid"
 
 #: ../src/file-manager/fm-directory-view.c:5313
 #: ../src/file-manager/fm-tree-view.c:975
@@ -3241,9 +3241,9 @@ msgstr "_Skriptid"
 
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:5740
-#, fuzzy
 msgid "Run or manage scripts from ~/.gnome2/nautilus-scripts"
-msgstr "Käivitab või korrastab skripte kataloogis ~/Nautilus/scripts"
+msgstr ""
+"Skriptide käivitamine või korrastamine kataloogis ~/.gnome2/nautilus-scripts"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:5742
@@ -3946,9 +3946,8 @@ msgid "Icons"
 msgstr "Ikoonid"
 
 #: ../src/file-manager/fm-icon-view.c:2674
-#, fuzzy
 msgid "_Icons"
-msgstr "Ikoonid"
+msgstr "_Ikoonid"
 
 #: ../src/file-manager/fm-list-view.c:1625
 #, c-format
