Translation updated by Ivar Smolin.
2005-07-08  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-04 06:18+0000\n"
-"PO-Revision-Date: 2005-07-04 13:14+0300\n"
+"PO-Revision-Date: 2005-07-07 23:59+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -3356,7 +3356,7 @@ msgstr "Lülitab peidetud failide näitamise käesolevas aknas sisse/välja"
 #: ../src/file-manager/fm-directory-view.c:6273
 #, c-format
 msgid "Run or manage scripts from %s"
-msgstr "Käivitab või korrastab skripte kataloogis %s"
+msgstr "Skriptide käivitamine või korrastamine kataloogis %s"
 
 #. Create a script action here specially because its tooltip is dynamic
 #: ../src/file-manager/fm-directory-view.c:6275
