--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-08  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Added src/nautilus-pathbar.c
+
 2005-07-08  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
