Preserve the selection when refreshing the view. Fixes #48383.
2005-07-09  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-window-manage-views.c: (nautilus_window_reload):
	Preserve the selection when refreshing the view. Fixes #48383.

	Patch from Fabio Bonelli <fabiobonelli@libero.it>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-07-09  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-window-manage-views.c: (nautilus_window_reload):
+	Preserve the selection when refreshing the view. Fixes #48383.
+
+	Patch from Fabio Bonelli <fabiobonelli@libero.it>
+
 2005-07-08  Alexander Larsson  <alexl@redhat.com>
 
         Patch from Jamie McCracken <jamiemcc@blueyonder.co.uk>
