Don't allow to add a color if another equally-named one already exists.
2005-07-10  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-property-browser.c: (add_color_to_browser): Don't allow
	to add a color if another equally-named one already exists. Fixes
	#44867.

	Patch from Daniel Godas <siro.san@gmail.com>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,7 @@
 	to add a color if another equally-named one already exists. Fixes
 	#44867.
 
-	Patch from Daniel Godas <siro.san@gmail.com> and Anoop M
-	<siro.san@gmail.com>.
+	Patch from Daniel Godas <siro.san@gmail.com>.
 
 2005-07-09  Martin Wehner  <martin.wehner@gmail.com>
 
